[gd_scene load_steps=31 format=2]

[ext_resource path="res://platformer-pack-medieval/PNG/medievalTile_042.png" type="Texture" id=1]
[ext_resource path="res://platformer-pack-medieval/PNG/medievalTile_061.png" type="Texture" id=2]
[ext_resource path="res://platformer-pack-medieval/PNG/medievalTile_045.png" type="Texture" id=3]
[ext_resource path="res://assets/player/player-spritemap-v9-greenpants.png" type="Texture" id=4]
[ext_resource path="res://Player/Player1.gd" type="Script" id=5]
[ext_resource path="res://Background.jpg" type="Texture" id=6]
[ext_resource path="res://assets/Music/Ghost's theme.ogg" type="AudioStream" id=7]
[ext_resource path="res://Dialogue3.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/icons/armor5.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 75, 0, 75, 76, 0, 76 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 75, 0, 75, 91, 0, 91 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 72, 0, 72, 88, 0, 88 )

[sub_resource type="TileSet" id=4]
0/name = "medievalTile_042.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -1, -5, 75, 76 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "medievalTile_045.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( -2, -4, 75, 91 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "medievalTile_061.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, -3, 72, 88 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.29228, 33.7157 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 46, 50 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 230, 0, 46, 50 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 150, 46, 50 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 46, 150, 46, 50 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 92, 150, 46, 50 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 138, 150, 46, 50 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 184, 150, 46, 50 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 230, 150, 46, 50 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 276, 150, 46, 50 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 322, 150, 46, 50 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 46, 50 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 276, 0, 46, 50 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 100, 46, 50 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 46, 100, 46, 50 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Stand",
"speed": 2.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 25, 25 )

[node name="Keyroom3" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.572549, 0.270588, 0.270588, 1 )
self_modulate = Color( 0.45098, 0.0117647, 0.0117647, 1 )
position = Vector2( 629.961, 304.901 )
scale = Vector2( 1.08903, 1 )
texture = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( 262145, 0, 0, 262163, 0, 0, 327681, 0, 0, 327699, 0, 0, 393217, 0, 0, 393235, 0, 0, 458753, 0, 0, 458771, 0, 0, 524289, 2, 0, 524296, -1610612735, 0, 524297, -1610612735, 0, 524298, -1610612735, 0, 524299, -1610612735, 0, 524300, -1610612735, 0, 524307, 0, 0, 589825, -1610612735, 0, 589826, -1073741823, 0, 589827, -1073741823, 0, 589828, -1073741823, 0, 589829, -1073741823, 0, 589830, -1610612735, 0, 589831, -1610612735, 0, 589832, -1610612735, 0, 589833, -1610612735, 0, 589834, -1610612735, 0, 589835, -1610612735, 0, 589836, -1610612735, 0, 589837, -1610612735, 0, 589838, -1610612735, 0, 589839, -1610612735, 0, 589840, -1610612735, 0, 589841, -1610612735, 0, 589842, -1610612735, 0, 589843, 0, 0 )

[node name="backdoor3" type="Area2D" parent="."]
position = Vector2( 144.379, 541.044 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="backdoor3"]
shape = SubResource( 5 )

[node name="Player1" type="KinematicBody2D" parent="."]
position = Vector2( 199.068, 539.246 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player1"]
frames = SubResource( 20 )
animation = "Stand"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource( 21 )

[node name="Camera2D" type="Camera2D" parent="Player1"]
current = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player1"]
stream = ExtResource( 7 )
volume_db = -15.0
autoplay = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1076.94, 483.921 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="Control" parent="." instance=ExtResource( 8 )]
margin_left = 16.4814
margin_top = 119.865
margin_right = 16.4814
margin_bottom = 119.865
[connection signal="body_entered" from="backdoor3" to="Player1" method="_on_backdoor3_body_entered"]
